# nanosideband

./: ANDROID_BUILD.md  README.md  buildozer.spec  main.py  p4a_hook.py  pyproject.toml  sitecustomize.py
.github/workflows/: build.yml
nano/: __init__.py  __main__.py  config.py  core.py  db.py  image.py  rnode_bt.py  tui.py  webui.py
patches/RNS/Interfaces/Android/: RNodeInterface.py
sbapp/: main.py
scripts/: smoke_test.py  smoke_test_db.py  smoke_test_image.py  smoke_test_tui.py  smoke_test_web.py
tests/: test_phase1.py
